<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Comentarios">

    <TextView
            android:text="@string/envianos_tus_comentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:textSize="20sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.649"/>
    <EditText
            android:layout_width="302dp"
            android:layout_height="61dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.473" android:hint="@string/ingresa_tu_e_mail"
            android:layout_marginBottom="44dp" app:layout_constraintBottom_toTopOf="@+id/editText2"/>
    <EditText
            android:layout_width="307dp"
            android:layout_height="60dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/ingresa_tu_mensaje"
            android:layout_marginBottom="52dp" app:layout_constraintBottom_toTopOf="@+id/enviar"/>
    <Button
            android:text="@string/enviar_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enviar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="124dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>